-Modified probAnc so that calculated NaN values are replaced with zero and a message is printed
-Added name and length checks to horizonSampRate, and code to resort names so they match if not input correctly
-Modified plotTraitgram to allow input of simulated node values, edited and clarified documentation and examples
-Small changes to order of arguments in bin_cal3TimePaleoPhy
-

Version - 2.6 - 12-01-15
-Fixed an issued with fossilRecord2fossilRanges where a dataset with a single taxon resulted in a fatal error regarding an attempt to replace more elements than already exists
-Fixed issue with merging cryptic taxa in fossilRecord2fossilRanges
-Discovered slight stochastic element in minBranchLength where order of edges mattered, and I apparently used sample() to choose the next edge, which means I was an idiot in 2011. Thanks to Manabu Sakamoto for reporting this very difficult to notice bug.
-Made several improvements to timeSliceTree thanks to modified code from Klaus Schliep, particularly replacing use of dist.nodes for root-to-tip distances with node.depth.edgelength instead (much more efficient, much faster!)
-Made similar changes to all functions in modifyTerminalBranches based on Klaus Schliep's suggestions, including dropExtinct
-Replaced any instance where dist.nodes was used to get root-to-node distances with node.depth.edgelength throughout paleotree, including branchClasses, cal3TimePaleoPhy, compareNodeAges, dateNodes, depthRainbow, multiDiv, phyloDiv, plotTraitgram, taxa2phylo, termTaxa, timePaleoPhy
-Revised DESCRIPTION's description of paleotree
-Revised README
-Removed functions getSampRateCont and getSampProbDisc and all references elsewhere in paleotree: use 'durationFreq' functions instead!
-Removed functions simFossilTaxa, simFossilTaxa_SRCond and simPaleoTrees and all references elsewhere in paleotree. Use simFossilRecord instead!
-Changed simTermTaxaAdvanced to use simFossilRecord rather than simFossilTaxa