@@ -4,6 +4,7 @@ Version - 2.7 -
 -Added name and length checks to horizonSampRate, and code to resort names so they match if not input correctly
 -Modified plotTraitgram to allow input of simulated node values, edited and clarified documentation and examples
 -Small changes to order of arguments in bin_cal3TimePaleoPhy
+-Added argument maxAttempts to simFossilRecord so that simFossilRecord will end after some number of failed attempts. Default is Inf.
 -
 
 Version - 2.6 - 12-01-15
